# src/controllers/index.ts
@@ -3,3 +3,5 @@ export * from "./summaries.controller";
 export * from "./webhooks.controller";
 export * from "./agencies.controller";
 export * from "./signals.controller";
+export * from "./sources.controller";
+export * from "./agents.controller";
